test/files/invalid/required_for_simple.stderr
error: Unsupported required attribute
  ┌─ test/files/invalid/required_for_simple.fbs:2:13
  │
2 │   x: uint8 (required);
  │      -----  ^^^^^^^^ required attribute was here
  │      │       
  │      only non-scalar types support the 'required' attribute

